# pb175

./: .air.toml  .gitignore  Makefile  admin.txt  bazos.db  contacts.db  go.mod  go.sum  main.go  replace.sh
cmd/: database.go  global.go  main.go  middleware.go  offers.go  users.go
cmd/client/: client_state.go  client_state_form.go
cmd/offers/: offer_delete.go  offer_set.go  offers.go  offers_add.go  offers_get.go
cmd/user/: user_delete.go  user_get.go  user_set.go  user_state_get.go  user_state_set.go
cmd/utility/: ut.go
components/: index.templ  index_templ.go  offers.templ  signup.templ  signup_templ.go  users.templ
database/: database.go  offers.go  users.go
install/: Makefile  Makefile.am  Makefile.in  admin.txt.in  autogen.sh  config.status  configure.ac  configure~  create.sh  help
install/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
state/: state.go
tests/: bench_test.go
views/: button_testing.html  contacts.html  index.html
views/data/: contacts.html  offers.html
views/index/: buttons.html  index.html
